[fixed] search bar resizing on small screens.

--- a/src/client/header/header-styles.module.scss
+++ b/src/client/header/header-styles.module.scss
@@ -56,6 +56,8 @@ $menu-side-padding: 20px;
         border-radius: 4px;
         font-family: "Open Sans", sans-serif;
         padding: 0 10px;
+        max-width: 500px;
+        margin: 0 10px;
 
         &:focus {
             outline: none;
@@ -79,6 +81,7 @@ $menu-side-padding: 20px;
         border-radius: 6px;
         user-select: none;
         appearance: none;
+        margin: 0 10px;
 
         &:hover,
         &:focus {
